# rs_design_pattern_derivatives_pricing

./: .gitignore  Cargo.toml  LICENSE.txt
.github/workflows/: rust.yml
src/: chapter10.rs  chapter4.rs  chapter5.rs  chapter7.rs  chapter9.rs  equity_fx_main.rs  lib.rs  main.rs  random_main3.rs  simple_mc_main1.rs  simple_mc_main2.rs  simple_mc_main3.rs  simple_mc_main4.rs  simple_mc_main5.rs  stats_main1.rs  stats_main2.rs  vanilla_main1.rs  vanilla_main2.rs  vanilla_main3.rs  vanilla_main4.rs
src/chapter1/: mod.rs  random1.rs
src/chapter10/: payoff_constructible.rs  payoff_factory.rs  payoff_registration.rs  payoff_registration_error.rs
src/chapter2/: mod.rs  payoff1.rs  simple_mc.rs
src/chapter3/: double_digital.rs  mod.rs  payoff2.rs  simple_mc2.rs
src/chapter4/: mod.rs  parameters.rs  payoff3.rs  payoff_bridge.rs  simple_mc3.rs  simple_mc4.rs  simple_mc5.rs  simple_mc6.rs  vanilla1.rs  vanilla2.rs  vanilla3.rs
src/chapter5/: convergence_table.rs  mc_statistics.rs  mod.rs  simple_mc7.rs
src/chapter6/: anti_thetic.rs  mod.rs  normals.rs  park_miller.rs  random2.rs  simple_mc8.rs
src/chapter7/: exotic_bs_engine.rs  exotic_engine.rs  path_dependent.rs  path_dependent_asian.rs
src/chapter9/: bisection.rs
src/web/: index.html  style.css
