[package]
name = "rust_design_pattern_derivative_pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
approx = "0.5.1"
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
time = "0.3.30"

[dev-dependencies]
approx = "0.5.1"
