[package]
name = "rust_design_pattern_derivative_pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
thiserror = "1.0.51"

[dev-dependencies]
approx = "0.5.1"
